# AD_variant_analysis

./: .gitignore  README.md  SFARI_TF_de_novo_variants_gpf.bed  example.ipynb  pyproject.toml
AD_variant_analysis/: __init__.py  classify_domain_snvs.py  classify_snvs.py  get_mutations_domains_snv_classified.py  intersect_domains_variants.py  intersect_variants.py
cds_beds/: ENST00000007699  ENST00000020945  ENST00000040584  ENST00000056233  ENST00000078445  ENST00000174618  ENST00000187879  ENST00000196489  ENST00000204517  ENST00000206513  ENST00000211936  ENST00000216037  ENST00000217086  ENST00000219091  ENST00000219478  ENST00000220659  ENST00000221665  ENST00000222122  ENST00000222726  ENST00000222728  ENST00000223357  ENST00000223459  ENST00000226247  ENST00000228437  ENST00000228515  ENST00000231751  ENST00000233638  ENST00000238558  ENST00000239007  ENST00000239144  ENST00000239165  ENST00000239243  ENST00000239882  ENST00000240055  ENST00000240328  ENST00000241001  ENST00000242057  ENST00000242159  ENST00000243440  ENST00000243644  (+527 more)
cds_beds/sorted/: ENST00000006015.bed  ENST00000007699.bed  ENST00000008391.bed  ENST00000204517.bed  ENST00000215742.bed  ENST00000217999.bed  (+291 more)
data/: all_TFs_table_proteins_with_IDR.txt
domain_beds/: A0PJY2  A1YPR0  A2RU54  A6NFD8  A6NK53  A6NK75  A6NMT0  A6NN14  A6NP11  A8MQ14  A8MTQ0  A8MUV8  A8MUZ8  A8MXY4  B7Z6K7  C9JN71  E7ETH6  E9PGG2  O00110  O00321  O00327  O00470  O00712  O14503  O14529  O14545  O14753  O14771  O14813  O14901  O14948  O14978  O15014  O15090  O15198  O15266  O15353  O15370  O15516  O15522  (+695 more)
(+2501 files in other folders)
